--- a/test/lib/CMakeLists.txt
+++ b/test/lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 if(BUILD_TESTING)
-  set(TESTS_LIST token)
+  set(TESTS_LIST token E2E)
   foreach(TEST_NAME IN LISTS TESTS_LIST)
-    add_executable(${TEST_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/AST/${TEST_NAME}.cc")
+    add_executable(${TEST_NAME} "${CMAKE_CURRENT_SOURCE_DIR}/AST/${TEST_NAME}.cpp")
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
   endforeach()
 endif()
