--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.clang_format_path": "/usr/bin/clang-format",
     "files.associations": {
-        "*.y": "yacc"
+        "*.y": "yacc",
+        ".y": "c++"
     }
 }
